--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.8",
+    "mongoose": "^5.11.12",
     "node-fetch": "^2.6.1",
     "node-localstorage": "^2.1.6",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "validator": "^13.5.2"
   }
 }
